# fluidPicture

./: CMakeLists.txt  LICENSE.txt  README.md  fluidPicture.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  picturemodel.cpp  picturemodel.h
python/: picture_model.py  pixel_editor.py
